--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,99 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <meta charset="utf-8">
-    <title>MOUKEN</title>
-    <style>
-        .container {
-            max-width: 100%;
-        }
-    </style>
-</head>
-<body class="bg-light">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="~{fragments.html :: head-css ('/css/sign-in.css')}"></head>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<body class="text-center">
 
-        <a class="navbar-brand" href="/" th:href="@{/}">
-            <img src="/images/logo_sm.png" width="32" height="32">
-        </a>
+    <main class="form-signin w-100 m-auto">
+    <form class="needs-validation" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
+        <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
+        <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <form th:action="@{/search/study}" class="form-inline" method="get">
-                        <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="Search" aria-label="Search" />
-                    </form>
-                </li>
-            </ul>
-            <ul class="navbar-nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/login}">login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/sign-up}">sign-up</a>
-                </li>
-            </ul>
+        <div class="form-floating">
+            <input type="email" class="form-control" id="floatingInput" th:field="*{email}" placeholder="name@example.com" required>
+            <label for="floatingInput">Email address</label>
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
+        </div>
+        <div class="form-floating">
+            <input type="text" class="form-control" id="floatingUsername" th:field="*{username}" placeholder="Username" required>
+            <label for="floatingUsername">Username</label>
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{username}">Username Error</small>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" th:field="*{password}" placeholder="Password" required minlength="8" maxlength="50">
+            <label for="floatingPassword">Password</label>
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
         </div>
 
-    </nav><!--navbar-->
-
-    <div class="container">
-
-        <div class="py-5 text-center">
-            <h2>Sign Up</h2>
+        <div class="checkbox mb-3">
+            <label>
+                <input type="checkbox" value="remember-me"> Remember me
+            </label>
         </div>
-
-        <div class="row justify-content-center">
-            <form class="needs-validation col-sm-6" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
-                <div class="form-group">
-                    <label for="nickname">ID</label>
-                    <input id="nickname" type="text" th:field="*{nickname}" class="form-control"
-                           placeholder="Account ID" aria-describedby="nicknameHelp" required minlength="3" maxlength="20">
-                    <small class="invalid-feedback">Enter your ID</small>
-                    <small class="form-text text-danger" th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}">Nickname Error</small>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" th:field="*{email}" class="form-control"
-                           placeholder="you@example.com" aria-describedby="emailHelp" required>
-                    <small id="emailHelp" class="form-text text-muted"></small>
-                    <small class="invalid-feedback">Enter your email</small>
-                    <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input id="password" type="password" th:field="*{password}" class="form-control"
-                           aria-describedby="passwordHelp" required minlength="8" maxlength="50">
-                    <small class="invalid-feedback">Enter your password</small>
-                    <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary btn-block" type="submit"
-                            aria-describedby="submitHelp">Sign up</button>
-                    <small id="submitHelp" class="form-text text-muted">
-                        <a href="#">terms</a>
-                    </small>
-                </div>
-            </form>
-        </div>
-
-        <footer th:fragment="footer">
-            <div class="row justify-content-center">
-                <img class="mb-2" src="/images/logo_wide.png" alt="" width="96">
-                <small class="d-block mb-3 text-muted">&copy; 2022</small>
-            </div>
-        </footer>
-
-    </div><!--container-->
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+<!--            <small id="submitHelp" class="form-text text-muted">-->
+<!--                <a href="#">terms</a>-->
+<!--            </small>-->
+    </form>
+    </main>
 
     <script type="application/javascript">
         (function () {
@@ -116,6 +58,5 @@
             }, false)
         }())
     </script>
-
 </body>
 </html>
