Fix bugs + Profile

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -9,11 +9,11 @@
       <h1 class="h3 mb-3 fw-normal">Sign in</h1>
 
       <div class="form-floating">
-        <input type="text" class="form-control" id="floatingUsername" placeholder="Username">
-        <label for="floatingUsername">Email address</label>
+        <input type="text" class="form-control" name="username" id="floatingUsername" placeholder="Username">
+        <label for="floatingUsername">Email or Username</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
 
@@ -24,11 +24,11 @@
       </div>
       <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
 <!--        TODO-->
-        <div class="find_text">Forgot your
+<!--        <div class="find_text">Forgot your
           <a target="_blank" id="pw-inquiry" href="#" class="en_find_text">Password</a> or
           <a target="_blank" id="id-inquiry" href="#" class="en_find_text">Username</a>?<br>
           <a target="_blank" id="join" href="#" class="en_find_text">Sign up</a>
-        </div>
+        </div>-->
     </form>
   </main>
 </body>
