--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments.html :: head-css (headers)}"></head>
+<head th:replace="~{fragments.html :: head-css ('/css/headers.css')}"></head>
 <body class="bg-light">
     <header th:replace="~{fragments.html :: header}"></header>
     <div class="container">
