--- a/src/main/resources/static/css/sign-up.css
+++ b/src/main/resources/static/css/sign-up.css
@@ -11,22 +11,30 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-signup {
   max-width: 330px;
   padding: 15px;
 }
 
-.form-signin .form-floating:focus-within {
+.form-signup .form-floating:focus-within {
   z-index: 2;
 }
 
-.form-signin input[id="floatingInputTop"] {
-  margin-bottom: -1px;
+.form-signup input[id="floatingInputTop"] {
+  margin-bottom: -2px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[id="floatingInputBottom"] {
+.form-signup input[id="floatingInputMiddle"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.form-signup input[id="floatingInputBottom"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
