--- a/src/main/resources/templates/account/check-email.html
+++ b/src/main/resources/templates/account/check-email.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments.html :: head-css (headers)}"></head>
+<head th:replace="~{fragments.html :: head-css ('/css/headers.css')}"></head>
 <body class="text-center">
 
 <header th:replace="~{fragments.html :: header}"></header>
