--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -2,19 +2,20 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments.html :: head-css (headers)}"></head>
+<head th:replace="~{fragments.html :: head-css ('/css/headers.css')}"></head>
 <body class="bg-light">
     <header th:replace="~{fragments.html :: header}"></header>
 
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
-                <!-- image -->
-                <svg th:if="${#strings.isEmpty(account.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
+                <!-- profile image -->
+                <svg th:if="${#strings.isEmpty(account.profileImage)}"
+                     class="img-fluid float-left rounded img-thumbnail"
                      th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
-                <img th:if="${!#strings.isEmpty(account.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
-                     th:src="${account.profileImage}"
-                     width="125" height="125"/>
+                <img th:if="${!#strings.isEmpty(account.profileImage)}"
+                     class="img-fluid float-left rounded img-thumbnail"
+                     th:src="${account.profileImage}" width="125" height="125"/>
             </div>
             <div class="col-8">
                 <!-- username -->
@@ -60,7 +61,7 @@
                             <span th:if="${isOwner && !account.emailVerified}" class="col-9">
                                 <a href="#" th:href="@{'/check-email?email=' + ${account.email}}">Please check your email to confirm.</a>
                             </span>
-                            <span th:text="${#temporals.format(account.joinedAt, 'It joined at yyyy-M ')}" class="col-9"></span>
+                            <span th:text="'joined ' + ${#temporals.format(account.joinedAt, 'MM/dd/yyyy')}" class="col-9"></span>
                         </p>
                         <div th:if="${isOwner}">
                             <a class="btn btn-outline-primary" href="#" th:href="@{/settings/profile}">Update</a>
