--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments.html :: head-css ('/css/sign-in.css')}"></head>
+<head th:replace="~{fragments.html :: head-css ('/css/sign-up.css')}"></head>
 
 <body class="text-center">
 
-    <main class="form-signin w-100 m-auto">
+    <main class="form-signup w-100 m-auto">
     <form class="needs-validation" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
         <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
         <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
         <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" th:field="*{email}" placeholder="name@example.com" required>
-            <label for="floatingInput">Email address</label>
+            <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" placeholder="name@example.com" required>
+            <label for="floatingInputTop">Email address</label>
             <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
         </div>
         <div class="form-floating">
-            <input type="text" class="form-control" id="floatingUsername" th:field="*{username}" placeholder="Username" required>
-            <label for="floatingUsername">Username</label>
-            <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{username}">Username Error</small>
+            <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" placeholder="Username" required>
+            <label for="floatingInputMiddle">Username</label>
+            <small class="form-text text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</small>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" th:field="*{password}" placeholder="Password" required minlength="8" maxlength="50">
-            <label for="floatingPassword">Password</label>
+            <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" placeholder="Password" required minlength="8" maxlength="50">
+            <label for="floatingInputBottom">Password</label>
             <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
-        </div>
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
 <!--            <small id="submitHelp" class="form-text text-muted">-->
@@ -37,26 +31,6 @@
     </form>
     </main>
 
-    <script type="application/javascript">
-        (function () {
-            'use strict';
-
-            window.addEventListener('load', function () {
-                // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                var forms = document.getElementsByClassName('needs-validation');
-
-                // Loop over them and prevent submission
-                Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-            }, false)
-        }())
-    </script>
+    <script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
