--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -28,6 +28,39 @@
     <link rel="stylesheet" href="#" th:href="${css}"/>
 </head>
 
+<div th:fragment="settings-menu (currentMenu)" class="list-group">
+    <a class="list-group-item list-group-item-action"
+       th:classappend="${currentMenu == 'profile'}? active"
+       href="#" th:href="@{/settings/profile}">
+        Profile
+    </a>
+    <a class="list-group-item list-group-item-action"
+       th:classappend="${currentMenu == 'password'}? active"
+       href="#" th:href="@{/settings/password}">
+        Password
+    </a>
+    <a class="list-group-item list-group-item-action"
+       th:classappend="${currentMenu == 'notifications'}? active"
+       href="#" th:href="@{/settings/notifications}">
+        Notifications
+    </a>
+    <a class="list-group-item list-group-item-action"
+       th:classappend="${currentMenu == 'tags'}? active"
+       href="#" th:href="@{/settings/tags}">
+        Tags
+    </a>
+    <a class="list-group-item list-group-item-action"
+       th:classappend="${currentMenu == 'zones'}? active"
+       href="#" th:href="@{/settings/zones}">
+        Locations
+    </a>
+    <a class="list-group-item list-group-item-action list-group-item-danger"
+       th:classappend="${currentMenu == 'account'}? active"
+       href="#" th:href="@{/settings/account}">
+        Account
+    </a>
+</div>
+
 <!--<header th:fragment="header-old" class="p-3 text-bg-dark">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -114,12 +147,14 @@
             <div class="dropdown text-end">
                 <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i sec:authorize="!isAuthenticated()" class="fa fa-bars" aria-hidden="true"></i>
-                    <svg sec:authorize="isAuthenticated()"
+                    <svg sec:authorize="isAuthenticated()" th:if="${#strings.isEmpty(account?.profileImage)}"
                          data-jdenticon-value="user127"
                          th:data-jdenticon-value="${#authentication.name}"
                          width="32" height="32" class="rounded-circle">
                     </svg>
-<!--                    <img sec:authorize="isAuthenticated()" src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">-->
+                    <img sec:authorize="isAuthenticated()" th:if="${!#strings.isEmpty(account?.profileImage)}"
+                         th:src="${account.profileImage}"
+                         width="32" height="32" class="rounded border"/>
                 </a>
                 <ul sec:authorize="!isAuthenticated()" class="dropdown-menu text-small">
                     <li><a class="dropdown-item" href="#" th:href="@{/login}">Sign in</a></li>
@@ -204,5 +239,25 @@
         <small class="d-block mb-3 text-muted">&copy; 2022</small>
     </div>
 </footer>
+<script type="application/javascript" th:fragment="form-validation">
+    (function () {
+        'use strict';
 
+        window.addEventListener('load', function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName('needs-validation');
+
+            // Loop over them and prevent submission
+            Array.prototype.filter.call(forms, function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (form.checkValidity() === false) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        }, false)
+    }())
+</script>
 </html>
