--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -35,6 +35,11 @@
       <div class="form-floating">
           <button class="w-100 btn btn-lg btn-primary" type="submit" >Sign in</button>
       </div>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me"> Remember me
+        </label>
+      </div>
     </form>
   </main>
 
@@ -45,11 +50,7 @@
             <a target="_blank" id="join" href="#" class="en_find_text">Sign up</a>
           </div>-->
 
-  <!--      <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>-->
+
   <script th:replace="fragments.html :: form-validation"></script>
 </body>
 </html>
