--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -2,77 +2,83 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments.html :: head-css ('/css/headers.css')}"></head>
-<body class="bg-light">
-    <header th:replace="~{fragments.html :: header}"></header>
 
-    <div class="container">
-        <div class="row mt-5 justify-content-center">
-            <div class="col-2">
-                <!-- profile image -->
-                <svg th:if="${#strings.isEmpty(account.profileImage)}"
-                     class="img-fluid float-left rounded img-thumbnail"
-                     th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
-                <img th:if="${!#strings.isEmpty(account.profileImage)}"
-                     class="img-fluid float-left rounded img-thumbnail"
-                     th:src="${account.profileImage}" width="125" height="125"/>
-            </div>
-            <div class="col-8">
-                <!-- username -->
-                <h1 class="display-4 " th:text="${account.username}">username</h1>
-                <!-- bio -->
-                <p class="lead" th:if="${!#strings.isEmpty(account.bio)}" th:text="${account.bio}">bio</p>
-                <p class="lead" th:if="${#strings.isEmpty(account.bio) && isOwner}">Introduce yourself</p>
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+    <title>index</title>
+</head>
+
+<body>
+<header th:replace="~{fragments/header.html :: header-common}"></header>
+
+<div class="container">
+    <div class="row mt-5 justify-content-center">
+        <div class="col-2">
+            <!-- profile image -->
+            <svg th:if="${#strings.isEmpty(account.profileImage)}"
+                 class="img-fluid float-left rounded img-thumbnail"
+                 th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
+            <img th:if="${!#strings.isEmpty(account.profileImage)}"
+                 class="img-fluid float-left rounded img-thumbnail"
+                 th:src="${account.profileImage}" width="125" height="125"/>
+        </div>
+        <div class="col-8">
+            <!-- username -->
+            <h1 class="display-4 " th:text="${account.username}">username</h1>
+            <!-- bio -->
+            <p class="lead" th:if="${!#strings.isEmpty(account.bio)}" th:text="${account.bio}">bio</p>
+            <p class="lead" th:if="${#strings.isEmpty(account.bio) && isOwner}">Introduce yourself</p>
+        </div>
+    </div>
+
+    <div class="row mt-3 justify-content-center">
+        <div class="col-2">
+            <!-- tab -->
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <a class="nav-link active" id="v-pills-intro-tab" data-toggle="pill" href="#v-pills-profile"
+                   role="tab" aria-controls="v-pills-profile" aria-selected="true">intro</a>
+                <a class="nav-link" id="v-pills-study-tab" data-toggle="pill" href="#v-pills-study"
+                   role="tab" aria-controls="v-pills-study" aria-selected="false">study</a>
             </div>
         </div>
-
-        <div class="row mt-3 justify-content-center">
-            <div class="col-2">
-                <!-- tab -->
-                <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link active" id="v-pills-intro-tab" data-toggle="pill" href="#v-pills-profile"
-                       role="tab" aria-controls="v-pills-profile" aria-selected="true">intro</a>
-                    <a class="nav-link" id="v-pills-study-tab" data-toggle="pill" href="#v-pills-study"
-                       role="tab" aria-controls="v-pills-study" aria-selected="false">study</a>
+        <div class="col-8">
+            <!-- tab content -->
+            <div class="tab-content" id="v-pills-tabContent">
+                <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                    <p th:if="${!#strings.isEmpty(account.url)}">
+                        <span style="font-size: 20px;"><i class="fa fa-link col-1"></i></span>
+                        <span th:text="${account.url}" class="col-11"></span>
+                    </p>
+                    <p th:if="${!#strings.isEmpty(account.occupation)}">
+                        <span style="font-size: 20px;"><i class="fa fa-briefcase col-1"></i></span>
+                        <span th:text="${account.occupation}" class="col-9"></span>
+                    </p>
+                    <p th:if="${!#strings.isEmpty(account.location)}">
+                        <span style="font-size: 20px;"><i class="fa fa-location-arrow col-1"></i></span>
+                        <span th:text="${account.location}" class="col-9"></span>
+                    </p>
+                    <p th:if="${isOwner}">
+                        <span style="font-size: 20px;"><i class="fa fa-envelope-o col-1"></i></span>
+                        <span th:text="${account.email}" class="col-9"></span>
+                    </p>
+                    <p th:if="${isOwner || account.emailVerified}">
+                        <span style="font-size: 20px;"><i class="fa fa-calendar-o col-1"></i></span>
+                        <span th:if="${isOwner && !account.emailVerified}" class="col-9">
+                            <a href="#" th:href="@{'/check-email?email=' + ${account.email}}">Please check your email to confirm.</a>
+                        </span>
+                        <span th:text="'joined ' + ${#temporals.format(account.joinedAt, 'MM/dd/yyyy')}" class="col-9"></span>
+                    </p>
+                    <div th:if="${isOwner}">
+                        <a class="btn btn-outline-primary" href="#" th:href="@{/settings/profile}">Update</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-8">
-                <!-- tab content -->
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                        <p th:if="${!#strings.isEmpty(account.url)}">
-                            <span style="font-size: 20px;"><i class="fa fa-link col-1"></i></span>
-                            <span th:text="${account.url}" class="col-11"></span>
-                        </p>
-                        <p th:if="${!#strings.isEmpty(account.occupation)}">
-                            <span style="font-size: 20px;"><i class="fa fa-briefcase col-1"></i></span>
-                            <span th:text="${account.occupation}" class="col-9"></span>
-                        </p>
-                        <p th:if="${!#strings.isEmpty(account.location)}">
-                            <span style="font-size: 20px;"><i class="fa fa-location-arrow col-1"></i></span>
-                            <span th:text="${account.location}" class="col-9"></span>
-                        </p>
-                        <p th:if="${isOwner}">
-                            <span style="font-size: 20px;"><i class="fa fa-envelope-o col-1"></i></span>
-                            <span th:text="${account.email}" class="col-9"></span>
-                        </p>
-                        <p th:if="${isOwner || account.emailVerified}">
-                            <span style="font-size: 20px;"><i class="fa fa-calendar-o col-1"></i></span>
-                            <span th:if="${isOwner && !account.emailVerified}" class="col-9">
-                                <a href="#" th:href="@{'/check-email?email=' + ${account.email}}">Please check your email to confirm.</a>
-                            </span>
-                            <span th:text="'joined ' + ${#temporals.format(account.joinedAt, 'MM/dd/yyyy')}" class="col-9"></span>
-                        </p>
-                        <div th:if="${isOwner}">
-                            <a class="btn btn-outline-primary" href="#" th:href="@{/settings/profile}">Update</a>
-                        </div>
-                    </div>
-                    <div class="tab-pane fade" id="v-pills-study" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        Study
-                    </div>
+                <div class="tab-pane fade" id="v-pills-study" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                    Study
                 </div>
             </div>
         </div>
     </div>
+</div>
+
+<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
 </html>
