--- a/src/main/resources/templates/settings/notifications.html
+++ b/src/main/resources/templates/settings/notifications.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments.html :: head-css ('/css/headers.css')}"></head>
-<body class="bg-light">
-<header th:replace="~{fragments.html :: header}"></header>
+
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+    <title>index</title>
+</head>
+
+<body>
+<header th:replace="~{fragments/header.html :: header-common}"></header>
+
 <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
@@ -15,7 +20,7 @@
             <div class="row">
                 <h2 class="col-12">Notifications</h2>
             </div>
-            <div class="row mt-3" th:fragment="profile-form">
+            <div class="row mt-3">
                 <form class="col-12" action="#" th:action="@{/settings/notifications}" th:object="${notifications}" method="post" novalidate>
                     <div class="row mt-2">
                         <div class="alert alert-light" role="alert">
@@ -72,7 +77,8 @@
             </div>
         </div>
     </div>
-
 </div>
+
+<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
 </html>
