--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -1,8 +1,13 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments.html :: head-css ('/css/headers.css')}"></head>
-<body class="bg-light">
-<header th:replace="~{fragments.html :: header}"></header>
+
+<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+    <title>index</title>
+</head>
+
+<body>
+<header th:replace="~{fragments/header.html :: header-common}"></header>
+
 <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
@@ -47,6 +52,10 @@
                     </form>
             </div>
         </div>
-        <script th:replace="fragments.html :: form-validation"></script>
+    </div>
+</div>
+
+<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
+<script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
 </html>
