--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -11,45 +11,55 @@
 <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
+            <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='password')"></div>
         </div>
+
         <div class="col-8">
+            <!-- alert -->
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
                 <span th:text="${message}">message</span>
             </div>
-            <div class="row">
-                <h2 class="col-sm-12" >Password Update</h2>
+
+            <div class="row"><!-- title -->
+                <h2 class="col-sm-12" >Password</h2>
             </div>
+
             <div class="row mt-3">
-                    <form class="needs-validation col-6" action="#"
-                          th:action="@{/settings/password}"
-                          th:object="${passwordForm}" method="post" novalidate>
-                        <div class="form-group row">
-                            <label for="newPassword">New Password</label>
-                            <input id="newPassword" type="password" th:field="*{newPassword}" class="form-control"
-                                   aria-describedby="newPasswordHelp" required min="8" max="50">
-                            <small id="newPasswordHelp" class="form-text text-muted">
-                                Please enter your new password.
-                            </small>
-                            <small class="invalid-feedback">Please enter your new password.</small>
-                            <small class="form-text text-danger" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}">New Password Error</small>
+                <form class="needs-validation col-9" action="#"
+                      th:action="@{/settings/password}"
+                      th:object="${passwordForm}" method="post" novalidate>
+                    <div class="form-group row">
+                        <label for="newPassword">New Password</label>
+                        <input id="newPassword" type="password" th:field="*{newPassword}" class="form-control"
+                               aria-describedby="newPasswordHelp" required min="8" max="50">
+                        <small id="newPasswordHelp" class="form-text text-muted">
+                            Please enter your new password.
+                        </small>
+                        <small class="invalid-feedback">Please enter your new password.</small>
+                        <small class="form-text text-danger" th:if="${#fields.hasErrors('newPassword')}"
+                               th:errors="*{newPassword}">New Password Error</small>
+                    </div>
+                    <div class="form-group row mt-2">
+                        <label for="newPasswordConfirm">New Password Confirm</label>
+                        <input id="newPasswordConfirm" type="password" th:field="*{newPasswordConfirm}"
+                               class="form-control"
+                               aria-describedby="newPasswordConfirmHelp" required min="8" max="50">
+                        <small id="newPasswordConfirmHelp" class="form-text text-muted">
+                            Please enter your new password again.
+                        </small>
+                        <small class="invalid-feedback">Please enter your new password again.</small>
+                        <small class="form-text text-danger" th:if="${#fields.hasErrors('newPasswordConfirm')}"
+                               th:errors="*{newPasswordConfirm}">New Password Confirm Error</small>
+                    </div>
+                    <div class="form-group row mt-2">
+                        <div class="col-3">
+                            <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">
+                                Confirm
+                            </button>
                         </div>
-
-                        <div class="form-group row mt-2">
-                            <label for="newPasswordConfirm">New Password Confirm</label>
-                            <input id="newPasswordConfirm" type="password" th:field="*{newPasswordConfirm}" class="form-control"
-                                   aria-describedby="newPasswordConfirmHelp" required min="8" max="50">
-                            <small id="newPasswordConfirmHelp" class="form-text text-muted">
-                                Please enter your new password again.
-                            </small>
-                            <small class="invalid-feedback">Please enter your new password again.</small>
-                            <small class="form-text text-danger" th:if="${#fields.hasErrors('newPasswordConfirm')}" th:errors="*{newPasswordConfirm}">New Password Confirm Error</small>
-                        </div>
-
-                        <div class="form-group row mt-2">
-                            <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">Confirm</button>
-                        </div>
-                    </form>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
