--- a/src/main/resources/static/css/sign-in.css
+++ b/src/main/resources/static/css/sign-in.css
@@ -31,3 +31,7 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.find_text, #pw-inquiry, #id-inquiry, #join {
+  color: #888;
+}
