--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <footer th:fragment="footer-common" class="text-center">
+    <footer th:fragment="footer-common" class="text-center mt-5">
         <small>&copy; 2022</small>
     </footer>
 
