--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,13 +2,15 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
   <title>Login</title>
+  <link rel="stylesheet" th:href="@{/css/sign-in.css}" />
 </head>
 
 <body class="text-center">
 
 <main class="form-signin w-100 m-auto">
+  <div class="container">
   <form class="needs-validation" action="#" th:action="@{/login}" method="post" novalidate>
     <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
     <h1 class="h3 mb-3 fw-normal">Sign in</h1>
@@ -21,24 +23,28 @@
       <input type="password" class="form-control" name="password" id="floatingInputBottom" placeholder="Password" required>
       <label for="floatingInputBottom">Password</label>
     </div>
-    <div class="form-floating">
-        <button class="w-100 btn btn-lg btn-primary" type="submit" >Sign in</button>
-    </div>
-    <div class="checkbox mb-3">
+    <div class="checkbox mt-2 mb-2">
       <label>
         <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me"> Remember me
       </label>
     </div>
+    <div class="form-floating">
+      <button class="w-100 btn btn-lg btn-primary" type="submit" >Sign in</button>
+    </div>
 
   </form>
-  <div class="find_text">Forgot your
-    <a target="_blank" id="pw-inquiry" href="#" th:href="@{/send-email-login-link}" class="en_find_text"> Password</a> or
-    <a target="_blank" id="id-inquiry" href="#" class="en_find_text"> Email</a>?<br/>
-    <a target="_blank" id="join" href="#" th:href="@{/sign-up}" class="en_find_text">Sign up</a>
+  <div class="find_text mt-1">
+    <small>
+    Forgot your <a target="_blank" id="pw-inquiry" href="#" th:href="@{/email-login}" class="en_find_text">Password</a>
+    or <a target="_blank" id="id-inquiry" href="#" class="en_find_text">Email</a>? |
+    <a target="_blank" id="join" href="#" th:href="@{/sign-up}" class="en_find_text"> Sign up</a>
+    </small>
   </div>
+  </div>
+  <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </main>
 
-<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
+
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
 </html>
