--- a/src/main/resources/templates/settings/notifications.html
+++ b/src/main/resources/templates/settings/notifications.html
@@ -10,66 +10,65 @@
 
 <div class="container">
     <div class="row mt-5 justify-content-center">
+
         <div class="col-2">
+            <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='notifications')"></div>
         </div>
+
         <div class="col-8">
+            <!-- alert -->
             <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
                 <span th:text="${message}">Update Complete</span>
             </div>
-            <div class="row">
+
+            <div class="row"><!-- title -->
                 <h2 class="col-12">Notifications</h2>
             </div>
+
             <div class="row mt-3">
-                <form class="col-12" action="#" th:action="@{/settings/notifications}" th:object="${notifications}" method="post" novalidate>
-                    <div class="row mt-2">
+                <form class="col-9" action="#" th:action="@{/settings/notifications}" th:object="${notifications}" method="post" novalidate>
+                    <div class="form-group row mt-2">
                         <div class="alert alert-light" role="alert">
                             Posting
                         </div>
-                        <div class="form-group">
-                            <div class="form-check form-switch">
-                                <input type="checkbox" role="switch" th:field="*{studyCreatedByEmail}" class="form-check-input" id="studyCreatedByEmail">
-                                <label class="form-check-label" for="studyCreatedByEmail">Email</label>
-                            </div>
-                            <div class="form-check form-switch">
-                                <input type="checkbox" role="switch" th:field="*{studyCreatedByWeb}" class="form-check-input" id="studyCreatedByWeb" checked>
-                                <label class="form-check-label" for="studyCreatedByWeb">Web</label>
-                            </div>
+                        <div class="form-check form-switch">
+                            <input type="checkbox" role="switch" th:field="*{studyCreatedByEmail}" class="form-check-input" id="studyCreatedByEmail">
+                            <label class="form-check-label" for="studyCreatedByEmail">Email</label>
+                        </div>
+                        <div class="form-check form-switch">
+                            <input type="checkbox" role="switch" th:field="*{studyCreatedByWeb}" class="form-check-input" id="studyCreatedByWeb" checked>
+                            <label class="form-check-label" for="studyCreatedByWeb">Web</label>
                         </div>
                     </div>
-                    <div class="row mt-2">
+                    <div class="form-group row mt-2">
                         <div class="alert alert-light" role="alert">
                             Enrollment
                         </div>
-                        <div class="form-group">
-                            <div class="form-check form-switch">
-                                <input type="checkbox" role="switch" th:field="*{studyEnrollmentResultByEmail}" class="form-check-input" id="studyEnrollmentResultByEmil">
-                                <label class="form-check-label" for="studyEnrollmentResultByEmil">Email</label>
-                            </div>
-                            <div class="form-check form-switch">
-                                <input type="checkbox" role="switch" th:field="*{studyEnrollmentResultByWeb}" class="form-check-input" id="studyEnrollmentResultByWeb" checked>
-                                <label class="form-check-label" for="studyEnrollmentResultByWeb">Web</label>
-                            </div>
+                        <div class="form-check form-switch">
+                            <input type="checkbox" role="switch" th:field="*{studyEnrollmentResultByEmail}" class="form-check-input" id="studyEnrollmentResultByEmil">
+                            <label class="form-check-label" for="studyEnrollmentResultByEmil">Email</label>
+                        </div>
+                        <div class="form-check form-switch">
+                            <input type="checkbox" role="switch" th:field="*{studyEnrollmentResultByWeb}" class="form-check-input" id="studyEnrollmentResultByWeb" checked>
+                            <label class="form-check-label" for="studyEnrollmentResultByWeb">Web</label>
                         </div>
                     </div>
-                    <div class="row mt-2">
+                    <div class="form-group row mt-2">
                         <div class="alert alert-light" role="alert">
                             Group
                         </div>
-                        <div class="form-group">
-                            <div class="form-check form-switch">
-                                <input type="checkbox" role="switch" th:field="*{studyUpdatedByEmail}" class="form-check-input" id="studyWatchByEmail">
-                                <label class="form-check-label" for="studyWatchByEmail">Email</label>
-                            </div>
-                            <div class="form-check form-switch">
-                                <input type="checkbox" role="switch" th:field="*{studyUpdatedByWeb}" class="form-check-input" id="studyWatchByWeb" checked>
-                                <label class="form-check-label" for="studyWatchByWeb">Web</label>
-                            </div>
+                        <div class="form-check form-switch">
+                            <input type="checkbox" role="switch" th:field="*{studyUpdatedByEmail}" class="form-check-input" id="studyWatchByEmail">
+                            <label class="form-check-label" for="studyWatchByEmail">Email</label>
                         </div>
-
+                        <div class="form-check form-switch">
+                            <input type="checkbox" role="switch" th:field="*{studyUpdatedByWeb}" class="form-check-input" id="studyWatchByWeb" checked>
+                            <label class="form-check-label" for="studyWatchByWeb">Web</label>
+                        </div>
                     </div>
-                    <div class="row mt-2">
-                        <div class="form-group">
+                    <div class="form-group row mt-2">
+                        <div class="col-3">
                             <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">Confirm</button>
                         </div>
                     </div>
