--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <footer th:fragment="footer-common" class="text-center mt-5">
-        <small>&copy; 2022</small>
+        <small>Mouken &copy; 2022</small>
     </footer>
 
     <footer th:fragment="footerParam (param1, param2)">
@@ -18,7 +18,7 @@
     <footer th:fragment="footer-row">
         <div class="row">
             <!--<img class="mb-2" src="/images/logo_wide.png" alt="" width="96">-->
-            <small class="d-block mb-3 text-muted">&copy; 2022</small>
+            <small class="d-block mb-3 text-muted">Mouken &copy; 2022</small>
         </div>
     </footer>
 </body>
