--- a/src/main/resources/templates/mail/simple-link.html
+++ b/src/main/resources/templates/mail/simple-link.html
@@ -7,17 +7,11 @@
 <body>
 <div>
     <p>Hello <span th:text="${username}"></span>.</p>
-
-    <h2 th:text="${message}">message</h2>
-
+    <h6 th:text="${message}">message</h6>
     <div>
-        <a th:href="${host + link}" th:text="${linkName}">link</a>
-        <p>If the link is invalid, you can use the address below directly</p>
         <small th:text="${host + link}"></small>
     </div>
 </div>
-<footer>
-    <small>Mouken &copy; 2020</small>
-</footer>
+<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </body>
 </html>
